--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
   </head>
-  <body>
+  <body onload="loadAllTodos()">
     <div class="container mt-5">
       <h1>TODO App</h1>
       <div class="input-group mb-3">
@@ -37,6 +37,13 @@
     </div>
 
     <script>
+      function saveAll() {
+        const allTodos = JSON.stringify(
+          Array.from(todoList.children).map((todo) => todo.textContent)
+        );
+        localStorage.setItem("myTodos", allTodos);
+      }
+
       function addTodo() {
         var newTodoText = document.getElementById("newTodo").value;
         var errorMessage = document.getElementById("errorMessage");
@@ -58,6 +65,7 @@
         deleteIcon.style.cursor = "pointer";
         deleteIcon.onclick = function () {
           todoList.removeChild(todoItem);
+          saveAll();
         };
 
         var editIcon = document.createElement("i");
@@ -67,6 +75,7 @@
           var updatedText = prompt("Edit the todo:", newTodoText);
           if (updatedText !== null && updatedText.trim() !== "") {
             todoText.textContent = updatedText;
+            saveAll();
           }
         };
 
@@ -77,11 +86,13 @@
 
         errorMessage.textContent = "";
         document.getElementById("newTodo").value = "";
+        saveAll();
       }
 
       function removeAllTodos() {
         var todoList = document.getElementById("todoList");
         todoList.innerHTML = "";
+        saveAll();
       }
 
       function confirmDeleteAll() {
@@ -90,6 +101,46 @@
         );
         if (confirmation) {
           removeAllTodos();
+        }
+        saveAll();
+      }
+
+      function loadAllTodos() {
+        const allTodos = JSON.parse(localStorage.getItem("myTodos"));
+        const todoList = document.getElementById("todoList");
+        if (allTodos) {
+          allTodos.forEach(function (todoText) {
+            var todoItem = document.createElement("li");
+            todoItem.className =
+              "list-group-item d-flex justify-content-between align-items-center";
+            var todoTextElement = document.createElement("span");
+            todoTextElement.textContent = todoText;
+
+            var deleteIcon = document.createElement("i");
+            deleteIcon.className = "fas fa-trash-alt text-danger ml-2";
+            deleteIcon.style.cursor = "pointer";
+            deleteIcon.onclick = function () {
+              todoList.removeChild(todoItem);
+              saveAll();
+            };
+
+            var editIcon = document.createElement("i");
+            editIcon.className = "fas fa-edit text-primary ml-2";
+            editIcon.style.cursor = "pointer";
+            editIcon.onclick = function () {
+              var updatedText = prompt("Edit the todo:", todoText);
+              if (updatedText !== null && updatedText.trim() !== "") {
+                todoTextElement.textContent = updatedText;
+                saveAll();
+              }
+            };
+
+            todoItem.appendChild(todoTextElement);
+            todoItem.appendChild(editIcon);
+            todoItem.appendChild(deleteIcon);
+
+            todoList.appendChild(todoItem);
+          });
         }
       }
     </script>
